# NTT

./: .gitignore  CMakeLists.txt  README.md  common.cuh  cuntt.cuh  ntt.h  ntt.hpp  test.cpp
entity/src/: CMakeLists.txt
entity/src/include/: FF128.h  ModRing128.h  basic_finite_fields.h  basic_ntt_engine.h  cu_finite_field.cuh  cu_ntt_engine.cuh  default_random_engine.h  dummy.h  entity.h  fast_ntt_engine.h  interfaces.h  mod_ring_128.h  modular_ops.h  ntt.h  random_engine.h  utils.h
entity/src/lib/: basic_ntt_engine.cpp  default_random_engine.cpp  dummy.cpp  ntt.cpp
entity/test/: CMakeLists.txt  main.cpp
entity/test/include/: benchmark.h  default_random_engine.h  ntt_test.h  poly_mul.h  random_engine.h  ring_test.h
entity/test/lib/: benchmark.cpp  ntt_test.cpp  ring_test.cpp
